Changes with APR 1.0

  *) The following deprecated interfaces have been removed:

     apr_accept                   -> apr_socket_accept
     apr_allocator_get_mutex      -> apr_allocator_mutex_get
     apr_allocator_get_owner      -> apr_allocator_owner_get
     apr_allocator_set_max_free   -> apr_allocator_max_free_set
     apr_allocator_set_mutex      -> apr_allocator_mutex_set
     apr_allocator_set_owner      -> apr_allocator_owner_set
     apr_bind                     -> apr_socket_bind
     apr_compare_groups           -> apr_gid_compare
     apr_compare_users            -> apr_uid_compare
     apr_connect                  -> apr_socket_connect
     apr_current_userid           -> apr_uid_current
     apr_explode_localtime        -> apr_time_exp_lt
     apr_explode_time             -> apr_time_exp_tz
     apr_filename_of_pathname     -> apr_filepath_name_get
     apr_file_set_inherit         -> apr_file_inherit_set
     apr_file_unset_inherit       -> apr_file_inherit_unset
     apr_getsocketopt             -> apr_socket_opt_get
     apr_get_groupid              -> apr_gid_get
     apr_get_groupname            -> apr_gid_name_get
     apr_get_home_directory       -> apr_uid_homepath_get
     apr_get_userid               -> apr_uid_get
     apr_get_username             -> apr_uid_name_get
     apr_group_name_get           -> apr_gid_name_get
     apr_implode_gmt              -> apr_time_exp_gmt_get
     apr_is_fnmatch               -> apr_fnmatch_test
     apr_listen                   -> apr_socket_listen
     apr_lstat                    -> apr_stat
     apr_pool_get_abort           -> apr_pool_abort_get
     apr_pool_get_parent          -> apr_pool_parent_get
     apr_pool_set_abort           -> apr_pool_abort_set
     apr_pool_sub_make            -> apr_pool_create_ex
     apr_recv                     -> apr_socket_recv
     apr_recvfrom                 -> apr_socket_recvfrom
     apr_send                     -> apr_socket_send